@@ -19,7 +19,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: php_cli.c,v 1.113.2.2 2005/03/22 15:09:20 tony2001 Exp $ */
+/* $Id: php_cli.c,v 1.113.2.3 2005/10/06 20:36:45 johannes Exp $ */
 
 #include "php.h"
 #include "php_globals.h"
@@ -665,8 +665,9 @@ int main(int argc, char *argv[])
 				php_output_activate(TSRMLS_C);
 				php_cli_usage(argv[0]);
 				php_end_ob_buffers(1 TSRMLS_CC);
-				exit_status=1;
-				goto err;
+				exit_status=0;
+				zend_ini_deactivate(TSRMLS_C);
+				goto out_err;
 
 
 			case 'i': /* php info & quit */
@@ -675,7 +676,7 @@ int main(int argc, char *argv[])
 				}
 				php_print_info(0xFFFFFFFF TSRMLS_CC);
 				php_end_ob_buffers(1 TSRMLS_CC);
-				exit_status=1;
+				exit_status=0;
 				goto out;
 
 			case 'm': /* list compiled in modules */
@@ -687,8 +688,9 @@ int main(int argc, char *argv[])
 				print_extensions(TSRMLS_C);
 				php_printf("\n");
 				php_end_ob_buffers(1 TSRMLS_CC);
-				exit_status=1;
-				goto err;
+				exit_status=0;
+				zend_ini_deactivate(TSRMLS_C);
+				goto out_err;
 
 			case 'v': /* show php version & quit */
 				if (php_request_startup(TSRMLS_C)==FAILURE) {
@@ -700,7 +702,7 @@ int main(int argc, char *argv[])
 				php_printf("PHP %s (%s) (built: %s %s)\nCopyright (c) 1997-2004 The PHP Group\n%s", PHP_VERSION, sapi_module.name, __DATE__, __TIME__, get_zend_version());
 #endif
 				php_end_ob_buffers(1 TSRMLS_CC);
-				exit_status=1;
+				exit_status=0;
 				goto out;
 
 			default:
